--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,5 +1,7 @@
-<h1>Edit task</h1>
+<div class="m-4">
+  <h1>Edit task</h1>
 
-<%= render 'form', task: @task %>
+  <%= render 'form', task: @task %>
 
-<p><%= link_to 'Back to tasks', tasks_path %></p>
+  <p><%= link_to 'Back to tasks', tasks_path %></p>
+</div>
