--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,6 +1,8 @@
-<h1>New task</h1>
+<div class="m-4">
+  <h1>New task</h1>
 
-<%= render 'form', task: @task %>
+  <%= render 'form', task: @task %>
 
 
-<p><%= link_to 'Back to tasks', tasks_path %></p>
+  <p><%= link_to 'Back to tasks', tasks_path %></p>
+</div>
